INBOX-351 Fixed flex layout on iOS.

--- a/modules/linagora.esn.unifiedinbox/frontend/css/modules/header.less
+++ b/modules/linagora.esn.unifiedinbox/frontend/css/modules/header.less
@@ -88,6 +88,10 @@
       & > .left-container {
         // See http://stackoverflow.com/questions/26465745/ellipsis-in-flexbox-container
         min-width: 0;
+
+        :first-child {
+          .flex-noshrink;
+        }
       }
     }
   }
